removed unnecessary div.img-container element to fix image vertical stretching issue on mobile devices

--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -11,9 +11,7 @@ div.project > a {
 }
 
 .project-img {
-  display: block;
   width: 100%;
-  height: auto;
   border-radius: 10px;
   border: 1px #f6eabd solid;
 }
